--- a/index.html
+++ b/index.html
@@ -143,46 +143,46 @@
     </section>
     <!--team-->
     <section class="sections sections-bg " >
-        <div class="team container">
-            <h2 class="team__header">Наша команда</h2>
-                <ul class="team__list">
+        <div class="container">
+            <h2 class="team-header">Наша команда</h2>
+                <ul class="team">
                     <li class="team__card">
                         <img src="./image/productdesigner.jpg" width="270" alt="smiling man">
-                        <div class="person team__border">
+                        <div class="person person--border">
                             <h3 class="person__name">
                                 Игорь Демьяненко  
                             </h3>
                                 <p class="person__profession">
                                 Product Designer
                                 </p>
-                                <ul class="person__social__list">
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                <ul class="person__social-list">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-instagram">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-twitter">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-facebook">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-linkedin">
                                                 </use>
                                             </svg>
@@ -193,41 +193,41 @@
                     </li>
                     <li class="team__card">
                         <img src="./image/frontenddeveloper.jpg" width="270" alt="smailing woman">
-                        <div class="person team__border">
+                        <div class="person person--border">
                             <h3 class="person__name">
                             Ольга Репина 
                             </h3>
                                 <p class="person__profession">
                                     Frontend Developer
                                 </p>
-                                <ul class="person__social__list">
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                <ul class="person__social-list">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-instagram">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-twitter">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-facebook">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-linkedin">
                                                 </use>
                                             </svg>
@@ -238,41 +238,41 @@
                     </li>
                     <li class="team__card">
                         <img src="./image/marketing.jpg" width="270" alt="smiling man">
-                        <div class="person team__border">
+                        <div class="person person--border">
                             <h3 class="person__name">
                             Николай Тарасов
                             </h3>
                                 <p class="person__profession">
                                 Marketing
                                 </p>
-                                <ul class="person__social__list">
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                <ul class="person__social-list">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-instagram">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-twitter">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-facebook">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-linkedin">
                                                 </use>
                                             </svg>
@@ -284,41 +284,41 @@
                     </li >
                     <li class="team__card">
                         <img src="./image/uidesigner.jpg" width="270" alt="smiling man">
-                        <div class="person team__border">
+                        <div class="person person--border">
                             <h3 class="person__name">
                             Михаил Ермаков
                             </h3>
                                 <p class="person__profession">
                                 UI Designer
                                 </p>
-                                <ul class="person__social__list">
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                <ul class="person__social-list">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-instagram">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-twitter">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-facebook">
                                                 </use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="person__social__item">
-                                        <a href="" class="person__social__link">
-                                            <svg class="person__social__icon" width="20" height="20">
+                                    <li class="person__social-item">
+                                        <a href="" class="person__social-link">
+                                            <svg class="person__social-icon" width="20" height="20">
                                                 <use href="./image/icon.svg#icon-linkedin">
                                                 </use>
                                             </svg>
@@ -402,22 +402,22 @@
             <a class="footer-logo" href="">
                 Web <span class="footer-logo__White">Studio </span>
             </a>
-            <address class="adress">
-                <ul class="adress__list">
-                    <li class="adress__item">
+            <address class="address">
+                <ul class="address__list">
+                    <li class="address__item">
                         <a class="address__link "  href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener noreferrer">
                             <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>                        
                     </li>
-                    <li class="adress__item">
+                    <li class="address__item">
                         <a class="address__link" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li class="adress__item">
+                    <li class="address__item">
                         <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
             </div>
-            <div class="footer-social">
+            <div class="footer-social footer-social-wrap">
                 <h3 class="footer-social__header">присоединяйтесь</h3>
                 <ul class="footer-social__list">
                     <li class="footer-social__item">
