--- a/portfolio.html
+++ b/portfolio.html
@@ -91,149 +91,149 @@
                         </li>
                     </ul> 
                 </div>
-                <div class=" container">
-                    <ul class="container__project__list">
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                <div class=" container ">
+                    <ul class="project">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/tehnohriak.jpg" width="370" alt="foto of people">
-                                    <p class="container__project__text-imj">
+                                    <p class="project__text-imj">
                                         Технокряк это современная площадка распространения коронавируса.
                                         Компании используют эту платформу для цифрового шпионажа и атак
                                         на защищенные серверы конкурентов.
                                     </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Технокряк</h2>
-                                        <p class="container__project__text">Веб-сайт</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Технокряк</h2>
+                                        <p class="project__text">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/poster.jpg" width="370" alt="foto men play in basketball">
-                                    <p class="container__project__text-imj">
+                                    <p class="project__text-imj">
                                         Технокряк это современная площадка распространения коронавируса.
                                         Компании используют эту платформу для цифрового шпионажа и атак
                                         на защищенные серверы конкурентов.
                                     </p>
                                     </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl" >Постер New Orlean vs Golden Star</h2>
-                                        <p class="container__project__text">Дизайн</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl" >Постер New Orlean vs Golden Star</h2>
+                                        <p class="project__text">Дизайн</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/restaurant.jpg" width="370" alt="image fish ">
-                                    <p class="container__project__text-imj">
+                                    <p class="project__text-imj">
                                         Технокряк это современная площадка распространения коронавируса.
                                         Компании используют эту платформу для цифрового шпионажа и атак
                                         на защищенные серверы конкурентов.
                                     </p>
                                     </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Ресторан Seafood</h2>
-                                        <p class="container__project__text">Приложение</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Ресторан Seafood</h2>
+                                        <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/headphouns.jpg" width="370" alt="headphouns">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                         Технокряк это современная площадка распространения коронавируса.
                                         Компании используют эту платформу для цифрового шпионажа и атак
                                         на защищенные серверы конкурентов.
                                     </p>
                                     </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Проект Prime</h2>
-                                        <p class="container__project__text">Маркетинг</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Проект Prime</h2>
+                                        <p class="project__text">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                    <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                    <div class="project__wrap">
                                 <img src="./image/portfolio/boxes.jpg" width="370" alt="two boxes">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                     Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового шпионажа и атак
                                     на защищенные серверы конкурентов.
                                 </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Проект Boxes</h2>
-                                        <p class="container__project__text">Приложение</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Проект Boxes</h2>
+                                        <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/monitor.jpg" width="370" alt="monitor">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                     Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового шпионажа и атак
                                     на защищенные серверы конкурентов.
                                 </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Inspiration has no Borders</h2>
-                                        <p class="container__project__text">Веб-сайт</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Inspiration has no Borders</h2>
+                                        <p class="project__text">Веб-сайт</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/magazine.jpg" width="370" alt="magazine with photos">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                     Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового шпионажа и атак
                                     на защищенные серверы конкурентов.
                                 </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Издание Limited Edition</h2>
-                                        <p class="container__project__text">Дизайн</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Издание Limited Edition</h2>
+                                        <p class="project__text">Дизайн</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/lab.jpg" width="370" alt="label">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                     Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового шпионажа и атак
                                     на защищенные серверы конкурентов.
                                 </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Проект LAB</h2>
-                                        <p class="container__project__text">Маркетинг</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Проект LAB</h2>
+                                        <p class="project__text">Маркетинг</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="container__project__item">
-                            <a href="" class="container__project__link">
-                                <div class="container__project__wrap">
+                        <li class="project__item">
+                            <a href="" class="project__link">
+                                <div class="project__wrap">
                                 <img src="./image/portfolio/laptop.jpg" width="370" alt="laptop">
-                                <p class="container__project__text-imj">
+                                <p class="project__text-imj">
                                     Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового шпионажа и атак
                                     на защищенные серверы конкурентов.
                                 </p>
                                 </div>
-                                <div class="container__project__container">
-                                    <h2 class="container__project__titl">Growing Business</h2>
-                                        <p class="container__project__text">Приложение</p>
+                                <div class="project__container">
+                                    <h2 class="project__titl">Growing Business</h2>
+                                        <p class="project__text">Приложение</p>
                                 </div>
                             </a>
                         </li>
@@ -249,18 +249,18 @@
                 <a class="footer-logo" href="">
                     Web <span class="footer-logo__White">Studio </span>
                 </a>
-                <address class="adress">
-                    <ul class="adress__list">
-                        <li class="adress__item">
+                <address class="address">
+                    <ul class="address__list">
+                        <li class="address__item">
                             <a class="address__link "
                                 href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                                 target="_blank" rel="noopener noreferrer">
                                 <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>
                         </li>
-                        <li class="adress__item">
+                        <li class="address__item">
                             <a class="address__link" href="mailto:info@example.com">info@example.com</a>
                         </li>
-                        <li class="adress__item">
+                        <li class="address__item">
                             <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
