--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body class="body">
-    <header>
-        <div class="container header--container">
+    <!-- <header> -->
+        <!-- <div class="container header--container">
             <a class="logo" href="">
                 Web <span class="logo__color">Studio </span>
-            </a>
+            </a> -->
             <!--navigation-->
-            <nav class="nav">
+            <!-- <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item ">
                         <a class="nav__link " href="./index.html">Студия</a>
@@ -35,9 +35,9 @@
                         <a class="nav__link" href="">Контакты</a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
             <!--contacts-->
-            <ul class="contacts header__contacts">
+            <!-- <ul class="contacts header__contacts">
                 <li class="contacts__item">
                     <a class="contacts__link" href="mailto:info@devstudio.com">
                         <svg class="contacts__icon" width="16" height="12">
@@ -56,13 +56,13 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <main>
         <!-- filters -->
-        <section class="sections">
+        <!-- <section class="sections">
             <div class="filters container">
             <!-- Заголовок H1 сделан невидимым -->
-                <h1 class="visually-hidden">Веб-сайты Приложения Дизайн Маркетинг</h1>
+                <!-- <h1 class="visually-hidden">Веб-сайты Приложения Дизайн Маркетинг</h1>
                     <ul class="filters__list">
                         <li class="filters__item">                            
                             <button class="filters__button" type="button">
@@ -239,11 +239,11 @@
                         </li>
                     </ul>
                 </div>
-        </section>
+        </section> --> -->
     </main>
 
     <!--footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-container">
             <div class="footer-contacts">
                 <a class="footer-logo" href="">
@@ -314,6 +314,6 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
