--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body >    
-        <header>
+        <!-- <header>
             <div class="container header--container">
                 <a class="logo" href="">
                     Web <span class="logo__color">Studio </span>
-                </a>
+                </a> -->
                 <!--navigation-->
-                    <nav class="nav">
+                    <!-- <nav class="nav">
                             <ul class="nav__list" >
                                 <li class="nav__item nav__item--position">
                                 <a class="nav__link nav__link--active" href="./index.html">Студия</a>
@@ -35,9 +35,9 @@
                                 <a class="nav__link"  href="">Контакты</a>
                                 </li>
                             </ul>
-                    </nav>
+                    </nav> -->
             <!--contacts-->
-                    <ul class="contacts">
+                    <!-- <ul class="contacts">
                         <li class="contacts__item">                            
                             <a class="contacts__link" href="mailto:info@devstudio.com">
                                 <svg class="contacts__icon" width="16" height="12">
@@ -65,9 +65,9 @@
                     Заказать услугу
                 </button>       
         </div>
-    </section>
+    </section> -->
     <!--conditions-->
-    <section class="sections sections-wrap">
+    <section class="sections ">
         <div class="conditions container">
             <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="conditions__list">
@@ -116,7 +116,7 @@
             </div>
     </section>
     <!--about-->
-    <section class="sections">
+    <!-- <section class="sections">
         <div class=" about container">
             <h2 class="about__header">Чем мы занимаемся</h2>
             <ul class="about__list">
@@ -140,10 +140,10 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> -->
     <!--team-->
-    <section class="sections sections-bg " >
-        <div class="container">
+     <section class="sections sections-bg " >
+                 <div class="container">
             <h2 class="team-header">Наша команда</h2>
                 <ul class="team">
                     <li class="team__card">
@@ -329,14 +329,14 @@
                     </li>
                 </ul>
         </div>
-    </section>
+    </section>  
     <section class="sections">
-        <div class="clients container">
-            <h2 class="clients__header">Постоянные клиенты</h2>
-            <ul class="clients__list">
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+        <div class=" container">
+            <h2 class="clients-header">Постоянные клиенты</h2>
+            <ul class="clients-list">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-1">
                             </use>                            
                         </svg>
@@ -344,18 +344,18 @@
                     </a>
 
                 </li>
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-2">
                             </use>
                         </svg>
                     
                     </a>
                 </li>
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-3">
                             </use>
                         </svg>
@@ -363,9 +363,9 @@
                     </a>
 
                 </li>
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-4">
                             </use>
                         </svg>
@@ -373,9 +373,9 @@
                     </a>
 
                 </li>
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-5">
                             </use>
                         </svg>
@@ -383,9 +383,9 @@
                     </a>
 
                 </li>
-                <li class="clients__item">
-                    <a href="" class="clients__link">
-                        <svg class="clients__icon" width="106" height="60">
+                <li class="clients-list__item">
+                    <a href="" class="clients-list__link">
+                        <svg class="clients-list__icon" width="106" height="60">
                             <use href="./image/icon.svg#icon-Logo-6">
                             </use>
                         </svg>                    
@@ -393,66 +393,68 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section> 
     </main>
     <!--footer-->
-    <footer class="footer" >
+     <footer class="footer">
         <div class="container footer-container">
+            <div class="footer-contacts-wrap">
             <div class="footer-contacts">
-            <a class="footer-logo" href="">
-                Web <span class="footer-logo__White">Studio </span>
-            </a>
-            <address class="address">
-                <ul class="address__list">
-                    <li class="address__item">
-                        <a class="address__link "  href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener noreferrer">
-                            <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>                        
-                    </li>
-                    <li class="address__item">
-                        <a class="address__link" href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li class="address__item">
-                        <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
-            </div>
-            <div class="footer-social footer-social-wrap">
-                <h3 class="footer-social__header">присоединяйтесь</h3>
-                <ul class="footer-social__list">
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-instagram">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>                    
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-twitter">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-facebook">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a href="" class="footer-social__link">
-                            <svg class="footer-social__icon" width="20" height="20">
-                                <use href="./image/icon.svg#icon-linkedin">
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                <a class="footer-logo" href="">
+                    Web <span class="footer-logo__White">Studio </span>
+                </a>
+                <address class="address">
+                    <ul class="address__list">
+                        <li class="address__item">
+                            <a class="address__link "  href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener noreferrer">
+                                <span class="address__text">г. Киев, пр-т Леси Украинки, 26 </span></a>                        
+                        </li>
+                        <li class="address__item">
+                            <a class="address__link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="address__item">
+                            <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+                </div>
+                <div class="footer-social footer-social-wrap">
+                    <h3 class="footer-social__header">присоединяйтесь</h3>
+                    <ul class="footer-social__list">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-instagram">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>                    
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-twitter">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-facebook">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
+                                    <use href="./image/icon.svg#icon-linkedin">
+                                    </use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <form class="footer-form footer-form-wrap">
                 <h3 class="footer-form__header">подпишитесь на рассылку</h3>
@@ -460,16 +462,18 @@
                         <input type="email" 
                             name="email"
                             placeholder="E-mail" 
-                            class="footer-form__imail">                       
-                            <button class="futer-form__button">Подписаться <svg class="futer-form__icon" width="24" height="24">
-                            <use href="./image/icon.svg#icon-icon-send">
-                            </use>
-                            </svg></button>
+                            class="footer-form__imail"> 
+                            <div class="futer-form__button-wrap">                     
+                                <button class="futer-form__button">Подписаться <svg class="futer-form__icon" width="24" height="24">
+                                <use href="./image/icon.svg#icon-icon-send">
+                                </use>
+                                </svg></button>
+                            </div>
                     </div>             
             </form>
-        </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal >
+        </div> 
+   </footer>
+    <!-- <div class="backdrop is-hidden" data-modal >
         <div class="modal">
             <button type="button" class="modal__close" data-modal-close>
                 <svg class="modal__close-icon" width="18" height="18">
@@ -526,7 +530,7 @@
 
         </div>
     </div> 
-   <script src="./js/modal.js"></script>
+   <script src="./js/modal.js"></script> --> 
    
 </body>
 </html>
