--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                 <ul class="team">
                     <li class="team__card">
                         <picture>                      
-                                <source srcset="./image/team/team-1_d_1x.JPG 1x,
-                                                ./image/team/team-1_d_2x.JPG 2x" 
+                                <source srcset="./image/team/team-1_d_1x.jpg 1x,
+                                                ./image/team/team-1_d_2x.jpg 2x" 
                                             media="(min-width: 1200px)">
                                 <source srcset="./image/team/team-1_t_1x.jpg 1x,
                                                 ./image/team/team-1_t_2x.jpg 2x" 
@@ -287,12 +287,12 @@
                     </li>
                     <li class="team__card">
                         <picture>
-                            <source srcset="./image/team/team-2_d_1x.JPG 1x,
-                                                                        ./image/team/team-2_d_2x.JPG 2x" media="(min-width: 1200px)">
+                            <source srcset="./image/team/team-2_d_1x.jpg 1x,
+                                            ./image/team/team-2_d_2x.jpg 2x" media="(min-width: 1200px)">
                             <source srcset="./image/team/team-2_t_1x.jpg 1x,
-                                                                        ./image/team/team-2_t_2x.jpg 2x" media="(min-width: 768px)">
+                                            ./image/team/team-2_t_2x.jpg 2x" media="(min-width: 768px)">
                             <source srcset="./image/team/team-2_m_1x.jpg 1x,
-                                                                        ./image/team/team-2_m_2x.jpg 2x" media="(min-width: 320px)">
+                                            ./image/team/team-2_m_2x.jpg 2x" media="(min-width: 320px)">
                             <img src="./image/team/team-2_d_1x" alt="smiling man" />
                         </picture>
                         
@@ -341,8 +341,8 @@
                     </li>
                     <li class="team__card">
                         <picture>
-                            <source srcset="./image/team/team-3_d_1x.JPG 1x,
-                                            ./image/team/team-3_d_2x.JPG 2x"
+                            <source srcset="./image/team/team-3_d_1x.jpg 1x,
+                                            ./image/team/team-3_d_2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source srcset="./image/team/team-3_t_1x.jpg 1x,
                                             ./image/team/team-3_t_2x.jpg 2x"
@@ -400,8 +400,8 @@
                     <li class="team__card">
                         <picture>
                             <source
-                                srcset="./image/team/team-4_d_1x.JPG 1x,
-                                    ./image/team/team-4_d_2x.JPG 2x"
+                                srcset="./image/team/team-4_d_1x.jpg 1x,
+                                    ./image/team/team-4_d_2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source
                                 srcset="./image/team/team-4_t_1x.jpg 1x,
