--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/ocupation1.JPG 1x,
+                        srcset="./image/ocupation/ocupation1.jpg 1x,
                                 ./image/ocupation/a1_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
@@ -199,7 +199,7 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/ocupation2.JPG 1x,
+                        srcset="./image/ocupation/ocupation2.jpg 1x,
                                 ./image/ocupation/a2_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
@@ -212,7 +212,7 @@
                 </li> 
                 <li class="about__imj">
                     <picture>
-                        <source srcset="./image/ocupation/ocupation3.JPG 1x,
+                        <source srcset="./image/ocupation/ocupation3.jpg 1x,
                                                     ./image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
                         <img src="./image/ocupation3.jpg" alt="tablet keyboard two hands">
                     </picture>
