--- a/portfolio.html
+++ b/portfolio.html
@@ -425,5 +425,7 @@
             </form>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
