Дз-8 на проверку

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                         <a class="logo" href="">
                             Web <span class="logo__color">Studio </span>
                         </a>
-                        <button type="button" class=" mob-menu-open js-open-menu">
+                        <button type="button" class=" mob-menu-open" data-menu-open>
                             <svg class="header-mob__icon" width="40" height="40">
                                 <use href="./image/icon.svg#icon-menu_40px">
                                 </use>
                             </svg>
                         </button>
                     </div>
-                <div class="mob-menu  is-hidden js-menu-container" >
-                    <div class="mob-container  ">
-                        <div class="mob-menu-top">
-                            <button type="button" class="menu-close-btn js-close-menu">
+                <div class="mob-menu  is-hidden " data-menu>
+                    <div class="mob-container ">
+                        <div >
+                            <button type="button" class="menu-close-btn" data-menu-close>
                                 <svg class="menu-close-icon" width="40" height="40">
                                     <use href="./image/icon.svg#icon-mob-close_40px">
                                     </use>
