--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/ocupation1.jpg 1x,
-                                ./image/ocupation/a1_2x.jpg 2x"
+                        srcset="../image/ocupation/a1_1x.jpg 1x,
+                                ../image/ocupation/a1_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
-                    <img src="./image/ocupation1.jpg"  alt="tablet keyboard two hands">
+                    <img src="../image/ocupation/a1_1x.jpg"  alt="tablet keyboard two hands">
                     </picture>
                     <div class="about__text">
                         <p>Десктопные приложения</p>
@@ -201,11 +201,11 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/ocupation2.jpg 1x,
-                                ./image/ocupation/a2_2x.jpg 2x"
+                        srcset="../image/ocupation/a2_1x.jpg 1x,
+                                ../image/ocupation/a2_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
-                    <img src="./image/ocupation2.jpg"  alt="tablet keyboard two hands">
+                    <img src="../image/ocupation/a2_1x.jpg"  alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
@@ -214,9 +214,9 @@
                 </li> 
                 <li class="about__imj">
                     <picture>
-                        <source srcset="./image/ocupation/ocupation3.jpg 1x,
-                                                    ./image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
-                        <img src="./image/ocupation3.jpg" alt="tablet keyboard two hands">
+                        <source srcset="../image/ocupation/a3_1x.jpg 1x,
+                                        .//image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
+                        <img src="../image/ocupation/a3_1x.jpg" alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
@@ -233,14 +233,14 @@
                 <ul class="team">
                     <li class="team__card">
                         <picture>                      
-                                <source srcset="./image/team/team-1_d_1x.jpg 1x,
-                                                ./image/team/team-1_d_2x.jpg 2x" 
+                                <source srcset="../image/team/team-1_d_1x.jpg 1x,
+                                                ../image/team/team-1_d_2x.jpg 2x" 
                                             media="(min-width: 1200px)">
-                                <source srcset="./image/team/team-1_t_1x.jpg 1x,
-                                                ./image/team/team-1_t_2x.jpg 2x" 
+                                <source srcset="../image/team/team-1_t_1x.jpg 1x,
+                                                ../image/team/team-1_t_2x.jpg 2x" 
                                         media="(min-width: 768px)">
-                                <source srcset="./image/team/team-1_m_1x.jpg 1x,
-                                                ./image/team/team-1_m_2x.jpg 2x"
+                                <source srcset="../image/team/team-1_m_1x.jpg 1x,
+                                                ../image/team/team-1_m_2x.jpg 2x"
                                         media="(min-width: 320px)">
                         <img src="./image/team/team-1_d_1x" alt="smiling man"/>
                     </picture>
