--- a/portfolio.html
+++ b/portfolio.html
@@ -122,9 +122,9 @@
     <main>
         <!-- filters -->
         <section class="sections">
-            <div class="filters container">
+            <div class=" container">
                             <h1 class="visually-hidden">Веб-сайты Приложения Дизайн Маркетинг</h1>
-                     <ul class="filters__list">
+                     <ul class="filters">
                         <li class="filters__item">                            
                             <button class="filters__button" type="button">
                                 Все
@@ -151,8 +151,8 @@
                             </button>
                         </li>
                     </ul> 
-                </div>
-                <div class=" container "> 
+                
+                 
                     <ul class="project">
                         <li class="project__item">
                             <a href="" class="project__link project__link--first">
