--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body >    
-        <header>
+        <header class="header">
             <div class="container header--container">
                 <a class="logo" href="">
                     Web <span class="logo__color">Studio </span>
@@ -122,8 +122,8 @@
         </header>   
     <main>
         <!-- hero -->
-    <section>
-        <div class="container hero">
+    <section class="hero">
+        <div class="container ">
             <h1 class="hero__header"> Эффективные решения для вашего бизнеса </h1>
             <button class="hero__button" type="button" data-modal-open>
                 Заказать услугу
