--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <li class="about__imj">
                     <picture>
                         <source srcset="../image/ocupation/a3_1x.jpg 1x,
-                                        .//image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
+                                        ../image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
                         <img src="../image/ocupation/a3_1x.jpg" alt="tablet keyboard two hands">
                     </picture>
                     
