Дз-8 отладка картинки

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <picture>
                         <source
                         srcset="../image/ocupation/a1_1x.jpg 1x,
-                                ../image/ocupation/a1_2x.jpg 2x"
+                                ../image/ocupation/a1_2x.jpg "
                                 media="(min-width:1200px)"
                                 >                               
                     <img src="../image/ocupation/a1_1x.jpg"  alt="tablet keyboard two hands">
