--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
                  
                     <ul class="project">
                         <li class="project__item">
-                            <a href="" class="project__link project__link--first">
+                            <a href="" class="project__link ">
                                 <div class="project__wrap">
                                     <picture>
                                     <source srcset="./image/project/1_d_1x.jpg 1x,
