--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="../image/ocupation/a1_1x.jpg 1x,
-                                ../image/ocupation/a1_2x.jpg "
+                        srcset="../image/ocupation/a1_1x.JPG 1x,
+                                ../image/ocupation/a1_2x.JPG "
                                 media="(min-width:1200px)"
                                 >                               
-                    <img src="../image/ocupation/a1_1x.jpg"  alt="tablet keyboard two hands">
+                    <img src="../image/ocupation/a1_1x.JPG"  alt="tablet keyboard two hands">
                     </picture>
                     <div class="about__text">
                         <p>Десктопные приложения</p>
@@ -201,11 +201,11 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="../image/ocupation/a2_1x.jpg 1x,
-                                ../image/ocupation/a2_2x.jpg 2x"
+                        srcset="../image/ocupation/a2_1x.JPG 1x,
+                                ../image/ocupation/a2_2x.JPG 2x"
                                 media="(min-width:1200px)"
                                 >                               
-                    <img src="../image/ocupation/a2_1x.jpg"  alt="tablet keyboard two hands">
+                    <img src="../image/ocupation/a2_1x.JPG"  alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
@@ -214,9 +214,9 @@
                 </li> 
                 <li class="about__imj">
                     <picture>
-                        <source srcset="../image/ocupation/a3_1x.jpg 1x,
-                                        ../image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
-                        <img src="../image/ocupation/a3_1x.jpg" alt="tablet keyboard two hands">
+                        <source srcset="../image/ocupation/a3_1x.JPG 1x,
+                                        ../image/ocupation/a3_2x.JPG 2x" media="(min-width:1200px)">
+                        <img src="../image/ocupation/a3_1x.JPG" alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
