Дз-8отладка картинки4

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/a1_1x.jpg 1x,
+                        srcset="./image/ocupation/ocupation1.jpg 1x,
                                 ./image/ocupation/a1_2x.jpg "
                                 media="(min-width:1200px)"
                                 >                               
@@ -201,7 +201,7 @@
                 <li class="about__imj">
                     <picture>
                         <source
-                        srcset="./image/ocupation/a2_1x.jpg 1x,
+                        srcset="./image/ocupation/ocupation2.jpg 1x,
                                 ./image/ocupation/a2_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
@@ -214,7 +214,7 @@
                 </li> 
                 <li class="about__imj">
                     <picture>
-                        <source srcset="./image/ocupation/a3_1x.jpg 1x,
+                        <source srcset="./image/ocupation/ocupation3.jpg 1x,
                                         ./image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
                         <img src="./image/ocupation/a3_1x.jpg" alt="tablet keyboard two hands">
                     </picture>
