--- a/index.html
+++ b/index.html
@@ -186,12 +186,9 @@
             <ul class="about__list">
                 <li class="about__imj">
                     <picture>
-                        <source
-                        srcset="./image/ocupation/ocupation1.jpg 1x,
-                                ./image/ocupation/a1_2x.jpg "
-                                media="(min-width:1200px)"
-                                >                               
-                    <img src="./image/ocupation/a1_1x.JPG"  alt="tablet keyboard two hands">
+                        <source srcset="./image/ocupation/ocupation1.jpg 1x,
+                                                        ./image/ocupation/a1_2x.jpg 2x" media="(min-width:1200px)">
+                    <img src="./image/ocupation/ocupation1.jpg"  alt="tablet keyboard two hands">
                     </picture>
                     <div class="about__text">
                         <p>Десктопные приложения</p>
@@ -205,7 +202,7 @@
                                 ./image/ocupation/a2_2x.jpg 2x"
                                 media="(min-width:1200px)"
                                 >                               
-                    <img src="./image/ocupation/a2_1x.jpg"  alt="tablet keyboard two hands">
+                    <img src="./image/ocupation/ocupation2.jpg"  alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
@@ -216,7 +213,7 @@
                     <picture>
                         <source srcset="./image/ocupation/ocupation3.jpg 1x,
                                         ./image/ocupation/a3_2x.jpg 2x" media="(min-width:1200px)">
-                        <img src="./image/ocupation/a3_1x.jpg" alt="tablet keyboard two hands">
+                        <img src="./image/ocupation/ocupation3.jpg" alt="tablet keyboard two hands">
                     </picture>
                     
                     <div class="about__text">
