--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body class="body">
-    <header>
+    <header class="header">
         <div class="container header--container">
             <a class="logo" href="">
                 Web <span class="logo__color">Studio </span>
